--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--Cabezera-->
         <header>
             <div id="logo">
-                <h1>Capacity</h1>
+                <h1>ProyectoJS</h1>
             </div>
 
             <div class="clearfix"></div>
@@ -61,7 +61,7 @@
                 <div><img src="img/hojas.jpg" title="Hojas"></div>
                 <div><img src="img/rojo.jpg" title="Rojo"></div>
                 <div><img src="img/cielo.jpg" title="Cielo"></div>
-              </div>
+            </div>
 
         </div>
 
